# gdmty-django-scian

./: LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  tests.py
.github/workflows/: python-package.yml  python-publish.yml
cat_scian/: admin.py  apps.py  models.py
cat_scian/fixtures/: cat_scian.json
cat_scian/migrations/: 0001_initial.py
django_scian/: admin.py  apps.py  models.py  serializers.py  urls.py  viewsets.py
django_scian/fixtures/: scian.json
django_scian/migrations/: 0001_initial.py
