# setup.cfg
[metadata]
name = gdmty-django-scian
version = 1.0
description = SCIAN Catalog installable django app (Esp)
long_description = file:README.rst
url = https://github.com/gobiernodigitalmonterrey/gdmty-django-scian
license = MIT
classifiers =
    Development Status :: 1 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=4.2
    django-treenode
    django_filters